# pypos

./: .gitignore  README.es.md  README.md  a.py  pypos.py  pyproject.toml  resources.qrc
assets/: attribution.txt
src/pypos/: __init__.py  __main__.py  cart.py  common.py  converter.py  help.py  inventory.py  inventory_model.py  inventory_table.py  reports.py  settings.py
src/scripts/: build_hook.py
