[project]
name = "pypos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mamg22", email = "45301823+mamg22@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6-essentials>=6.8.0.2",
    "unidecode>=1.3.8",
]

[project.scripts]
pypos = "pypos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/pypos/resources.py",
]

[tool.hatch.build.hooks.custom]
path = "src/scripts/build_hook.py"

[dependency-groups]
dev = []
